using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{
    public static string _isOnCeiling = "isOnCeiling";
    public static string _isOnWall = "isOnWall";
    internal static string isWalking = "isWalking";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string attack = "attack";
    internal static string canMove = "canMove";
}
